--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ domainUrl: 'http://bbing.cc'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
-tucaoUrl: https://support.qq.com/product/0000000
+tucaoUrl: https://support.qq.com/product/106784
 
 # 菜单
 menu:
